2004-04-23  Seth Robertson  <seth@pearl.sysdetect.com>

	* src/bk_funi.c: Funi lives!  (get away from the tyranny, and more
	to the point double-shell-parse of su)

2004-04-23  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* lib/b_time.c (bk_time_duration_parse): Add function to parse
	durations in DdHhMmSs format.

2004-04-21  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_ringdir.c (bk_ringdir_destroy): Add checkpoint after
	current open file closes.

	(bk_ringdir_rotate): Add checkpoint after close in case we get
	error before subsequent open.

2004-04-19  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_run.c (bk_run_destroy): Dequeue all events *before*
	closing descriptors.
	(bk_run_destroy): Do not delete hashes for event queue and
	fdassoc's untill the bitter end, just ince case folks reference
	them during shutdown.

	* lib/b_ringdir.c (bk_ringdir_standard_destroy): Goto error in
	destroy function is not a good idea (leak).

2004-04-16  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_ringdir.c (bk_ringdir_filename_predecessor): Use the
	pattern with the full path.

2004-04-15  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_ringdir.c (bk_ringdir_standard_get_size): Return correct
	value on error.
	(bk_ringdir_standard_get_size): If the file descriptor is bad, try
	to stat with the filename.

2004-04-14  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_ringdir.c (bk_ringdir_filename_predecessor): Use full path
	pattern.
	(bk_ringdir_filename_successor): ditto.

2004-04-07  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_ringdir.c: Iteration functions.
	(bk_ringdir_did_rotate_occur): Function to test if rotation
	occured on the last call to bk_ringdir_rotate().
	(bk_ringdir_rotate): Set flag is rotation occrs.
	(bk_ringdir_standard_get_fd): File descriptor accessor.
	(brd_create): Verify that input pattern creates valid filenames.

2004-03-26  Alexander Dupuy  <dupuy@sysdetect.com>
