@@ -1,3 +1,8 @@
+2004-04-26  James Tanis  <jtt@buscemi.sysdetect.com>
+
+	* src/bk_daemon.c (child): Only open stdin, stderr, and stdout on
+	/dev/null with -N if they are already closed.
+
 2004-04-23  Seth Robertson  <seth@pearl.sysdetect.com>
 
 	* src/bk_funi.c: Funi lives!  (get away from the tyranny, and more
